# super_rag

./: .env.example  .gitignore  README.md  docker-compose.yml  postgres.Dockerfile
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c113b4a16fb_add_ingestion_tasks_table_and_document_.py  1db822c50a5c_add_chunk_permission_tags_and_audit_logs.py  8e28d9c79b2c_add_chat_tables_and_pgvector_hnsw_index.py  b70de9b4de57_add_hybrid_retrieval_support.py  bfcb677945a3_add_evaluation_tables.py  de8f616ea215_add_auth_tables_and_permission_tags.py  ed41ae6bbcbc_init_documents_and_document_chunks.py
backend/app/: celery_app.py  main.py
backend/app/api/: deps.py  error_handlers.py
backend/app/cache/: semantic_cache.py
backend/app/core/: config.py  exceptions.py  logging.py  observability.py  rate_limiter.py  redis.py  security.py
backend/app/db/: base.py  models.py  seed.py  session.py
backend/app/evaluation/: __init__.py  dataset.py  ragas_runner.py  scoring.py
backend/app/ingestion/: embedder.py  parser.py  pipeline.py  splitter.py  tasks.py
backend/app/llm/: agent_planner.py  answer_verifier.py  models.py  prompts.py  query_rewriter.py  reranker.py
backend/app/mcp_server/: __init__.py  auth.py  schemas.py  server.py  tools.py
backend/app/retrieval/: hybrid_retriever.py  keyword_retriever.py  vector_retriever.py
backend/app/services/: auth_service.py  chat_service.py  document_service.py  evaluation_service.py  permission_service.py  role_service.py  semantic_cache_service.py  user_service.py
backend/app/storage/: cos_client.py  (+1 more)
(+83 files in other folders)
