[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.6.3",
    "cos-python-sdk-v5>=1.9.44",
    "docling>=2.104.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-community<0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langsmith>=0.8.3",
    "mcp>=1.28.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "ragas>=0.4.3",
    "redis>=6.4.0",
    "redisvl>=0.20.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
